Correct inline image alignment on Android Firefox

--- a/_sass/content_specific/post.scss
+++ b/_sass/content_specific/post.scss
@@ -9,7 +9,10 @@
 .tag-icon {
 	width: 16px;
 	height: 16px;
-	vertical-align: text-top;
+	vertical-align: middle;
+	
+	position: relative;
+	top: -2px;
 }
 
 .social-share {
